# AI-Enhanced-Patient-Healthcare

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  Dockerfile.backend  Dockerfile.combined  Dockerfile.frontend  GPU_ACCELERATION_GUIDE.md  LICENSE  README.md  TRANSFER_GUIDE.md  app_stack.txt  compose.yml  ecs-task-definition-combined.json  how-to-run.txt  package-lock.json  package.json  start-local-test.bat  start-local-test.sh  to-do.txt
backend/: GPU_ACCELERATION_GUIDE.md  hf_api_test.py  main.py  pyproject.toml  quick_test.py  requirements.txt  test_endpoint.py  test_script1.py
backend/adapters/: base.py  bedrock_model_adapter.py  embedder_adapter.py  hf_api_adapter.py  local_model_adapter.py  local_model_adapter2.py  local_model_adapter3.py  local_model_adapter4.py  skinlesion_efficientNet_adapter.py
backend/ai_models/: skin_lesion_efficientnetb0.pth
backend/api/: auth_routes.py  diagnosis_routes.py
backend/docs/: design_principle.md  workflow_stages.md
backend/graphs/: patient_workflow.py
backend/managers/: model_manager.py  websocket_manager.py  workflow_state_manager.py
backend/models/: ai_schema.py
backend/nodes/: __init__.py  follow_up_interaction_node.py  healthcare_treatment_recommendation_node.py  image_classification_node.py  llm_diagnosis_node.py  medical_report_node.py  overall_analysis_node.py
backend/schemas/: medical_schemas.py
backend/test/: test.py  test_batch_comparison.py  test_batch_performance.py  test_critical_performance.py  test_threading_performance.py  test_top_optimizations.py
(+119 files in other folders)
